@@ -11,6 +11,13 @@
 </tr>
 
 <tr>
+ <td width="40%">Appro SWPDU</td>
+ <td>48</td>
+ <td>swpdu</td>
+ <td></td>
+</tr>
+
+<tr>
  <td width="40%">APC AP9210</td>
  <td>8</td>
  <td>apcnew</td>
@@ -95,9 +102,32 @@
 </tr>
 
 <tr>
+ <td width="40%">HP3488 Switch/Control Unit</td>
+ <td>configurable</td>
+ <td>hp3488</td>
+ <td>Requires <a href="http://gpib-utils.sourceforge.net">gpib-utils</a>
+     hp3488 utility</td>
+</tr>
+
+<tr>
  <td width="40%">IBM Blade Center Management Module</td>
  <td>15</td>
  <td>ibmbladecenter</td>
+ <td></td>
+</tr>
+
+<tr>
+ <td width="40%">ICS 8064 Ethernet Relay Interface</td>
+ <td>16</td>
+ <td>ics8064</td>
+ <td>Requires <a href="http://gpib-utils.sourceforge.net">gpib-utils</a>
+     ics8064 utility</td>
+</tr>
+
+<tr>
+ <td width="40%">SmartLabs 2412S Power Line Modem (for X10/Insteon)</td>
+ <td>configurable</td>
+ <td>plmpower</td>
  <td></td>
 </tr>
 
@@ -132,7 +162,7 @@
 
 <tr>
  <td width="40%">IPMI</td>
- <td>1</td>
+ <td>configurable</td>
  <td>ipmipower</td>
  <td>Requires <a href="http://www.gnu.org/software/freeipmi/">FreeIPMI</a>
      ipmipower utility</td>
