@@ -1,3 +1,7 @@
+2008-06-23 Jim Garlick <garlick@llnl.gov>
+
+	* htdocs/supported.html : Add hp3488, ics8064, plmpower, swpdu.
+
 2008-06-22 Jim Garlick <garlick@llnl.gov>
 
 	* src/plmpower.c, etc/plmpower.dev : Add support for SmartLabs 
